# zenoh-pico-espidf

./: .gitignore  CMakeLists.txt  README.md  README_CN.md
.codegraph/: daemon.pid
.reasonix/: desktop-topic-created-at.json  desktop-topic-title-sources.json  desktop-topic-titles.json
include/: zenoh-pico.h
include/zenoh-pico/: config.h
